--- a/Gun1/1_3_StandartVeriTipleri.ipynb
+++ b/Gun1/1_3_StandartVeriTipleri.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dcf08d8f",
+   "id": "fe559b06",
    "metadata": {},
    "source": [
     "## Python Standart Veri Tipleri\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20b2fe13",
+   "id": "75cf2a6f",
    "metadata": {},
    "source": [
     "### Değişken Tanımlama"
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "335eca78",
+   "id": "476ecd46",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8043b543",
+   "id": "b3c5313c",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "457d3970",
+   "id": "26376e5a",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af910501",
+   "id": "dca82ff7",
    "metadata": {},
    "source": [
     "### Primitive Types"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75278a18",
+   "id": "799a3c0c",
    "metadata": {},
    "source": [
     "#### Numeric"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9e021af8",
+   "id": "02b11d42",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4bc3d23",
+   "id": "a0dac016",
    "metadata": {},
    "source": [
     "#### Bool"
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "11766aa5",
+   "id": "f652a014",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e89f5334",
+   "id": "373f789f",
    "metadata": {},
    "source": [
     "##### Bool tipine özel durumlar\n",
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "301028a9",
+   "id": "2a289167",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "26e108f8",
+   "id": "de5fabb5",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8786ae1a",
+   "id": "f4d26315",
    "metadata": {},
    "source": [
     "#### NoneType"
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ac7daa09",
+   "id": "9d68f650",
    "metadata": {
     "scrolled": true
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0a765e3",
+   "id": "799e773d",
    "metadata": {},
    "source": [
     "### Container Tipler"
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f38b429",
+   "id": "4240cb55",
    "metadata": {},
    "source": [
     "#### Sequence Types\n",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66b9235e",
+   "id": "91a2af14",
    "metadata": {},
    "source": [
     "#### str"
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cb201f1f",
+   "id": "f6b83585",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71a41039",
+   "id": "9bdcc21e",
    "metadata": {},
    "source": [
     "#### tuple\n",
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f24b1dcb",
+   "id": "e6f24260",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf5a9f0a",
+   "id": "116a298d",
    "metadata": {},
    "source": [
     "#### list\n",
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8da2c580",
+   "id": "fa719f42",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3492a275",
+   "id": "62a68022",
    "metadata": {},
    "source": [
     "#### Sequence elemanlarına erişmek\n",
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ace37f1a",
+   "id": "0d1cc09c",
    "metadata": {},
    "outputs": [
     {
@@ -487,6 +487,340 @@
     "lst[:3] #ilk 3 eleman\n",
     "lst[2:] #2. indexten sona kadar git\n",
     "lst[::-1] #tersten getirir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eb5f6be",
+   "metadata": {},
+   "source": [
+    "#### Set Types\n",
+    "* Elemanlarında sıra numarası yoktur. Elemanları sıralı değildir. Kayıt alınan sıra korunur.\n",
+    "* Elemanları benzersizdir.Yani aynı elemanda birden fazla kez bulunmaz.\n",
+    "* Matematikteki kümelere benzer, Kesişim, bileşim, fark gibi işlemleri destekler.\n",
+    "\n",
+    "#### Set\n",
+    "* {,,,} tanımlanır.\n",
+    "* kendisi mutabledir. Fakat elemananları immutable olmalıdır.\n",
+    "    * Bu yönüyle set içerisinde set tanımlanamaz. frozenset immutabledır. Bu amaç için kullanılabilr.\n",
+    "* set elemanları sıralı değildir. Sıra numarası ile erişilemez."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9c4f632e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 'metin'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = {0,1,2,3,\"metin\",False,True, \"metin\"}\n",
+    "\n",
+    "#\n",
+    "print(s) #benzersiz elemalar tutar. 0 False, 1 ise True olarak değerlendirilir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "2c3570ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'B', 'I', 'L', 'K', 'A'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = {\"K\",\"A\",\"L\",\"A\",\"B\",\"A\",\"L\",\"I\",\"K\"}\n",
+    "\n",
+    "print(m) #benzersiz ve sıra garantisiz depolanır."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "197c8eca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Ali', frozenset({'Ayşe', 'Fatma'})}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kadinlar = {\"Ayşe\",\"Fatma\"}\n",
+    "#personeller = {\"Ali\",kadinlar} #HATA !!! set içerisinde immutable tipler kullanılabilir. setin kendisi mutable.\n",
+    "\n",
+    "#\n",
+    "personeller = {\"Ali\",frozenset(kadinlar)}\n",
+    "personeller"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54ffc309",
+   "metadata": {},
+   "source": [
+    "### Mapping Types\n",
+    "* Sıralı değildir.\n",
+    "* Key:Value şeklinde depolanır\n",
+    "* Valulara keyler ile erişebiliriz.\n",
+    "\n",
+    "#### Dict\n",
+    "* Kendisi mutable tiptir. Fakat keyler immutable olmak zorundadır. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "7ff514a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Ad': 'Abdullah',\n",
+       " 'Soyad': 'Kise',\n",
+       " 1321213: 'SicilNo',\n",
+       " 'Yas': 100,\n",
+       " 'AktifMi': True,\n",
+       " 'Ehliyetler': ['A', 'B', 'C'],\n",
+       " (2024, 'Maaş'): 13213.49}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "personel = {\n",
+    "            \"Ad\":\"Abdullah\",\n",
+    "            \"Soyad\":\"Kise\",\n",
+    "            1321213:\"SicilNo\",\n",
+    "            \"Yas\":100,\n",
+    "            \"AktifMi\":True,\n",
+    "            \"Ehliyetler\":[\"A\",\"B\",\"C\"],\n",
+    "            #[2024,\"Maaş\"] : 121145.49   #keyler immutable olmak zorunda. list mutable bir tiptir.\n",
+    "            (2024,\"Maaş\"): 13213.49      #tuple immutable bir tiptir.\n",
+    "}\n",
+    "\n",
+    "personel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bc8109a",
+   "metadata": {},
+   "source": [
+    "#### Dict tipinin elemanlarına erişmek\n",
+    "* Keyker ile valulara erişebiliriz.\n",
+    "    * `dictNesnesi[key]`\n",
+    "        * key varsa value gelir. yoksa key yok hatası alırız.\n",
+    "    * `dictNesnesi.get(key, defaultDeger)`\n",
+    "        * key varsa gelir yoksa default değer gelir. hata vermez. default belirtilmezse None gelir.\n",
+    "* Key ve Valuları ayrıca çekmek:\n",
+    "    * `dictNesnesi.keys()` sadece keyler gelir.\n",
+    "    * `dictNesnesi.values()` sadece valular gelir.\n",
+    "    * `dictNesnesi.items()` ile key,value şeklinde tuple ikilileri gelir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "e7507cdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "personel[\"Ad\"]\n",
+    "\n",
+    "#\n",
+    "personel[\"Ehliyetler\"] #['A', 'B', 'C']\n",
+    "personel[\"Ehliyetler\"][0] #dönen listenin ilk elemanı gelir. \"A\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "9c9c6093",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('Ad', 'Abdullah'), ('Soyad', 'Kise'), (1321213, 'SicilNo'), ('Yas', 100), ('AktifMi', True), ('Ehliyetler', ['A', 'B', 'C']), ((2024, 'Maaş'), 13213.49)])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "personel.keys()\n",
+    "personel.values()\n",
+    "personel.items() #('Ad', 'Abdullah') şeklinde tuple (key, value) container getiririyor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "121f7c82",
+   "metadata": {},
+   "source": [
+    "### Mutable vs Immutable\n",
+    "* list, set, dict mutable tiplerdir.\n",
+    "* diğer standart tipler immutable dır.\n",
+    "* Neyi etkiler?\n",
+    "    * O nesneye eleman eklemek, çıkarmak, değiştirmek mümkün mü?\n",
+    "    * Atama yaptıktan sonra yapılan işlemler orjinalini etkiler mi?\n",
+    "    * Dict içerisinde key, set içerisinde eleman olarak bulunabilir mi? Başka fonksyionlarda da bu zorlanabilir."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85f1f53c",
+   "metadata": {},
+   "source": [
+    "#### Bir kısmı güncellenebilir mi?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "c6ef78c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['X', 'B']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = (\"A\",\"B\")\n",
+    "l = [\"A\",\"B\"]\n",
+    "\n",
+    "#\n",
+    "t[0]\n",
+    "l[0]\n",
+    "\n",
+    "#\n",
+    "#t[0] = \"X\" #HATA immutable tiplerin elemamları güncellenemez. Eleman eklenip çıkarılamaz.\n",
+    "#\n",
+    "#t.__add__() ile dolaylı yoldan eleman ekleme deneyimi yaşanabilir.\n",
+    "l[0] = \"X\" #list mutable olduğu için elemanı güncellenebiliyor.\n",
+    "\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b49674a",
+   "metadata": {},
+   "source": [
+    "#### Orjinalini etkiler mi?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "12591e6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#immutable tiplerdeki davranış\n",
+    "a = 1\n",
+    "b = a #b, a'nın değerini alır. atama işlemi\n",
+    "\n",
+    "#\n",
+    "print(a,b)\n",
+    "\n",
+    "#--------\n",
+    "b = 2\n",
+    "#--------\n",
+    "\n",
+    "print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "dc6a1fbc",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'B']\n",
+      "['X', 'B']\n",
+      "2260405636864\n",
+      "2260413908864\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#mutable tiplerdeki davranış\n",
+    "la = [\"A\",\"B\"]\n",
+    "\n",
+    "#atama işlemi\n",
+    "#lb = la\n",
+    "lb = la.copy() #orjinalini etkilemeyecek şekilde la değerini lb'ye kopyalar.\n",
+    "\n",
+    "#------\n",
+    "#güncelleyelim\n",
+    "lb[0] = \"X\"\n",
+    "\n",
+    "print(la, lb, sep='\\n')\n",
+    "print(id(la) , id(lb), sep=\"\\n\") #la ve lb'nin adresleri aynı. yani herhangibirinde yapılan değişiklik ikisii de etkiliyor.\n",
+    "\n",
+    "#\n",
+    "print(la is lb) #aynı yeri mi gösteriyor?"
    ]
   }
  ],
