--- a/Gun2/2_1_str_format.ipynb
+++ b/Gun2/2_1_str_format.ipynb
@@ -495,6 +495,328 @@
    "source": [
     "### Str Formatlama Yöntemleri"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ad = \"Abdullah\"\n",
+    "maas = 1245.49"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### % ve tıple kullanımı yöntemi(eski)\n",
+    "* tip zorunluluğu var."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ad: Abdullah\n",
+      "Maaş: 1245.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "    % yer tutucudur\n",
+    "    %s string\n",
+    "    %d integer\n",
+    "    %f float\n",
+    "\n",
+    "    %.1f noktadan sonra 1 basamak\n",
+    "\"\"\"\n",
+    "\n",
+    "fmt = \"Ad: %s\\nMaaş: %.1f\"%(ad,maas) #formatlama işlemi\n",
+    "\n",
+    "print(fmt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### str.format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ad: Abd\n",
+      "Maaş: ~~~~~~~~~~~1,245.5~~~~~~~~~~~~\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "    {} yer tutucudur\n",
+    "    {indexVeyaAlias : formatString}\n",
+    "\n",
+    "    #format string\n",
+    "    s: string\n",
+    "    d: integer\n",
+    "    f: float\n",
+    "    c: karekter\n",
+    "\n",
+    "    #genel kalıp\n",
+    "    HizalamadanKalanBoşluklarNasılDoldurulsun | Hizalama(<,>,^) ve HizalanacakAlan(adet) | binlikAyrac(,_) | .BasamakSayisiVeTip\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "fmt = \"Ad: {}\\nMaaş: {}\".format(ad,maas) #format ile {} yer tutuculara sırayla değerler atanır.\n",
+    "fmt = \"Ad: {0}\\nMaaş: {1}\".format(ad,maas) #index ile yer tutuculara değer atanır.\n",
+    "fmt = \"Ad: {v_ad}\\nMaaş: {v_maas}\".format(v_ad=ad,v_maas=maas) \n",
+    "\n",
+    "#\n",
+    "fmt = \"Ad: {:.3s}\\nMaaş: {:.1f}\".format(ad,maas) #.1f ile noktadan sonra 1 basamak alırız. .3s ile 3 karekter alırız.\n",
+    "fmt = \"Ad: {:.3s}\\nMaaş: {:,.1f}\".format(ad,maas) #, ile binlik ayraç belirtik. _ çizgi de olabilir.\n",
+    "fmt = \"Ad: {:.3s}\\nMaaş: {:^30,.1f}\".format(ad,maas) #^30 ile 30 karekter içerisinde orta. <, >, ^ kullanılabilir.\n",
+    "fmt = \"Ad: {:.3s}\\nMaaş: {:~^30,.1f}\".format(ad,maas) #~^30 ile 30 karekter içerisinde orta. ~ ile doldurduk.\n",
+    "\n",
+    "print(fmt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### format fonksiyonu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'____________1.5'"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "format(1.49, \"_>15.1f\") #15 karekter içerisinde sağa yasla ve noktadan sonra 1 basamak al. _ ile doldur."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### f-string yöntemi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ad: Abd\n",
+      "Maaş: ~~~~~~~~~~~1,245.5~~~~~~~~~~~~\n"
+     ]
+    }
+   ],
+   "source": [
+    "#fmt = \"Ad: {:.3s}\\nMaaş: {:~^30,.1f}\".format(ad,maas)\n",
+    "fmt = f\"Ad: {ad:.3s}\\nMaaş: {maas:~^30,.1f}\" #metnin başında f var. {} içerisinde değişken çağırabiliriz.\n",
+    "\n",
+    "print(fmt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### str.format_map(dict) Yöntemi\n",
+    "* metindeki dict keylerinin yerine dict valularını basar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abdullah isimli personelin güncel maaşı 1234.5 olarak değiştirilmesini rica ederim.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict_personel = {\n",
+    "                    \"ad\":\"Abdullah\",\n",
+    "                    \"maas\":1234.49\n",
+    "}\n",
+    "\n",
+    "#\n",
+    "fmt = \"{ad} isimli personelin güncel maaşı {maas:.1f} olarak değiştirilmesini rica ederim.\".format_map(dict_personel)\n",
+    "\n",
+    "print(fmt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#soru:\n",
+    "'''\n",
+    "    - metin dışarıdan alınabilsin.\n",
+    "    - metni belirtilen karakter içerisine ortalayalım. Mesela 30 karakter.\n",
+    "    - kalan boşluklara da - basalım.\n",
+    "    \n",
+    "------------------------------\n",
+    "-------merhaba dünyalı--------\n",
+    "------------------------------\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'------------------------------'"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# contanerlarda * işlemi eleman sayısını tekrarlatır.\n",
+    "[1,2,3] * 5 #5 defa tekrarlar.\n",
+    "\n",
+    "#\n",
+    "\"merhaba\"*3\n",
+    "\"-\"*30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metin = \"Merhaba Dünyalı\" #input(\"Metni giriniz:\")\n",
+    "cizgiSayisi = 30 #int(input(\"Çizgi sayısını giriniz:\")) #kullanıcıdan alınan değer string tipindedir. int tipine çevirelim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------\n",
+      "-------Merhaba Dünyalı--------\n",
+      "------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.yöntem\n",
+    "print(\"-\"*cizgiSayisi)\n",
+    "print(metin.center(cizgiSayisi,\"-\"))\n",
+    "print(\"-\"*cizgiSayisi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------Merhaba Dünyalı--------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2.yöntem\n",
+    "#fmt = f\"{metin:-^30}\"\n",
+    "fmt = f\"{metin:-^{cizgiSayisi}}\" #format kısmı bizden direkt str bekler. Eğer değişken vereceksek {} kullanmamız gerekir. {cizgiSayisi} vermeliyiz.\n",
+    "\n",
+    "print(fmt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------Merhaba Dünyalı--------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3. yömtem\n",
+    "#fmt = \"{:-^30}\".format(metin)\n",
+    "fmt = \"{:-^{}}\".format(metin, cizgiSayisi) #en dıştaki ilk içerideki ikinci yer tutucudur.\n",
+    "\n",
+    "print(fmt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#soru: Yazar kasa fişi oluşturalım\n",
+    "'''\n",
+    "==============================\n",
+    "Item                     Price\n",
+    "------------------------------\n",
+    "Elma                      0.40\n",
+    "Karpus                    0.50\n",
+    "Üzüm                      1.92\n",
+    "Havuc (16 oz.)            8.00\n",
+    "Prasa (4 lbs.)           12.00\n",
+    "==============================\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
