--- a/Gun2/2_2_date_datetime_time_timedelta.ipynb
+++ b/Gun2/2_2_date_datetime_time_timedelta.ipynb
@@ -343,20 +343,65 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'datetime.datetime'>\n",
+      "Tuesday\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"'Tuesday'\""
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#soru:\n",
-    "# Kullanıcıdan alıan tarihe bakalım ve kulanıcının hangi gün doğduğunu bulalım. (gün adı gelsin.)\n"
+    "# Kullanıcıdan alınan tarihe bakalım ve kulanıcının hangi gün doğduğunu bulalım. (gün adı gelsin.)\n",
+    "str_tarih = '01-05-1980' #input(\"Doğum tarihinizi giriniz:\")\n",
+    "\n",
+    "#\n",
+    "dt_tarih = datetime.strptime(str_tarih, \"%d-%M-%Y\")\n",
+    "\n",
+    "#\n",
+    "print(type(dt_tarih))\n",
+    "print(dt_tarih.strftime(\"%A\"))\n",
+    "\n",
+    "#\n",
+    "format(dt_tarih,\"%A\")\n",
+    "f\"{dt_tarih:'%A'}\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Siz doğalı 16_485 gün , 49950 saniye oldu.\n",
+      "Siz doğalı toplamda 1,424,353,951 saniye oldu.\n"
+     ]
+    }
+   ],
    "source": [
     "#soru:\n",
-    "#doğalı kaç gün, kaç saniye olmuş? toplamda kaç saniye yaşamış?"
+    "#doğalı kaç gün, kaç saniye olmuş? toplamda kaç saniye yaşamış?\n",
+    "gecen_sure = datetime.now() - dt_tarih\n",
+    "\n",
+    "#\n",
+    "print(f\"Siz doğalı {gecen_sure.days:_} gün , {gecen_sure.seconds} saniye oldu.\")\n",
+    "print(f\"Siz doğalı toplamda {gecen_sure.total_seconds():,.0f} saniye oldu.\")"
    ]
   }
  ],
