--- a/Gun2/2_4_try_except_finally.ipynb
+++ b/Gun2/2_4_try_except_finally.ipynb
@@ -109,11 +109,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Soru: gömülü hata tipleri nelerdir? __builtins__ error olanlar.\n"
+    "#Soru: gömülü hata tipleri nelerdir? __builtins__ error olanlar.\n",
+    "#[e for e in dir(__builtins__) if \"Error\" in e]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sistem hata mesajı : Negatif sayıları çevirmek için Pro lisans kullanmanız gerekir.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#örn:\n",
+    "#free lisansda sadece pozitif sıcaklıkarın hesaplanmasını negatiflerde hata vermesini isteyelim.\n",
+    "c_str = \"-10\" #input(\"Sıcaklık giriniz (C cinsinden):\")\n",
+    "\n",
+    "#\n",
+    "try:\n",
+    "    C = float(c_str) #tip dönüşümü yapalım.\n",
+    "\n",
+    "    #-------------------\n",
+    "    if C<0:\n",
+    "        raise PermissionError(\"Negatif sayıları çevirmek için Pro lisans kullanmanız gerekir.\") #yapay bir hata. #Permission sistemde bulunan bir hata tipidir.\n",
+    "    #-------------------\n",
+    "    #hata yoksa hesaplama yapalım\n",
+    "    F = 1.8 * C + 32\n",
+    "    print(f\"{C} C = {F} F\")\n",
+    "except Exception as ex:\n",
+    "    print(f\"Sistem hata mesajı : {ex}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kendi hata tiplerimizi oluşturalım"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(type(ZeroDivisionError)) #<class 'type'>\n",
+    "\n",
+    "#temel hata tipinden kalırsak o tipin özelliklerini barındırır. Böylece python engine bunu gerçek bir hata nesnesi olarak tanır.\n",
+    "class NegatifSicakliklariDesteklemiyoruzError(Exception): #(Exception) ile Exception tipinden kalıtmış yani genel özellikleri devralmış olduk.\n",
+    "    #yeni class'a metot ve attribute tanımalayabilirim. Ancak şimdilik ihtiyac yok.\n",
+    "    pass #kodlar için yer tutucudur. #hata vermemesi için en azondan pass yazmamız gerekir.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NegatifSicakliklariDesteklemiyoruzError",
+     "evalue": "Negatif sıcaklıkları desteklemiyoruz.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNegatifSicakliklariDesteklemiyoruzError\u001b[0m   Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m NegatifSicakliklariDesteklemiyoruzError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNegatif sıcaklıkları desteklemiyoruz.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNegatifSicakliklariDesteklemiyoruzError\u001b[0m: Negatif sıcaklıkları desteklemiyoruz."
+     ]
+    }
+   ],
+   "source": [
+    "raise NegatifSicakliklariDesteklemiyoruzError(\"Negatif sıcaklıkları desteklemiyoruz.\") #oluşturduğumuz hatayı raise ile ürettik."
    ]
   }
  ],
